@@ -65,7 +65,7 @@ let BITSET_STEP = prove
   GEN_TAC THEN MATCH_MP_TAC num_INDUCTION THEN
   REWRITE_TAC[ARITH; ODD_MULT; DIV_1; NOT_SUC; ODD_ADD] THEN
   GEN_TAC THEN DISCH_THEN(K ALL_TAC) THEN
-  REWRITE_TAC[EQ_SUC; UNWIND_THM1; EXP] THEN
+  REWRITE_TAC[SUC_INJ; UNWIND_THM1; EXP] THEN
   SIMP_TAC[CONV_RULE(RAND_CONV SYM_CONV) (SPEC_ALL DIV_DIV);
            MULT_EQ_0; EXP_EQ_0; ARITH] THEN
   REWRITE_TAC[ARITH_RULE `(2 * n + 1) DIV 2 = n /\ (2 * n) DIV 2 = n`]);;
@@ -74,7 +74,7 @@ let BINARYSUM_BITSET = prove
  (`!n. binarysum (bitset n) = n`,
   CONV_TAC(ONCE_DEPTH_CONV SYM_CONV) THEN REWRITE_TAC[binarysum] THEN
   MATCH_MP_TAC BINARY_INDUCT THEN REWRITE_TAC[BITSET_0; NSUM_CLAUSES] THEN
-  SIMP_TAC[BITSET_STEP; NSUM_IMAGE; EQ_SUC; ADD1; FINITE_BITSET; ARITH;
+  SIMP_TAC[BITSET_STEP; NSUM_IMAGE; SUC_INJ; ADD1; FINITE_BITSET; ARITH;
   NSUM_CLAUSES; FINITE_IMAGE; IN_IMAGE; ARITH_RULE `~(0 = x + 1)`] THEN
   REWRITE_TAC[o_DEF; EXP; NSUM_LMUL] THEN
   ASM_MESON_TAC[ADD_SYM; ARITH_RULE `~(2 * m = 0) ==> m < 2 * m`;
