@@ -1537,7 +1537,6 @@ theorems :=
 "EQ_MULT_RCANCEL",EQ_MULT_RCANCEL;
 "EQ_REFL",EQ_REFL;
 "EQ_SPAN_INSERT_EQ",EQ_SPAN_INSERT_EQ;
-"EQ_SUC",EQ_SUC;
 "EQ_SYM",EQ_SYM;
 "EQ_SYM_EQ",EQ_SYM_EQ;
 "EQ_TRANS",EQ_TRANS;
