@@ -271,7 +271,6 @@ theorems :=
 "EQ_MULT_LCANCEL",EQ_MULT_LCANCEL;
 "EQ_MULT_RCANCEL",EQ_MULT_RCANCEL;
 "EQ_REFL",EQ_REFL;
-"EQ_SUC",EQ_SUC;
 "EQ_SYM",EQ_SYM;
 "EQ_SYM_EQ",EQ_SYM_EQ;
 "EQ_TRANS",EQ_TRANS;
